<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/spinner_dropdown_background"
    android:backgroundTint="?android:attr/textColorPrimaryInverseDisableOnly"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="82dp"
    tools:layout_editor_absoluteY="0dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:backgroundTint="@color/material_dynamic_primary20"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="@+id/space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/banner"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="27sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="2dp" />

    </androidx.appcompat.widget.Toolbar>



    <Space
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112" />

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="391dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:minHeight="48dp"
            android:text="@string/nom"
            android:textAlignment="center"
            android:textColor="?attr/textColorAlertDialogListItem"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:text="@string/req"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="italic" />

    </TableRow>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="VisualLintBounds">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/AgreNom"
            android:layout_width="352dp"
            android:layout_height="match_parent"
            android:background="@android:drawable/editbox_background"
            android:backgroundTint="@color/design_default_color_background"
            android:hint="@string/hint1"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#26C6DA"
            android:textColorHint="@color/material_dynamic_neutral20"
            android:textSize="14sp"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:minHeight="48dp"
            android:text="@string/ape"
            android:textAlignment="center"
            android:textColor="?attr/textColorAlertDialogListItem"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:text="@string/req"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="italic" />

    </TableRow>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow3"
        tools:ignore="VisualLintBounds">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Apellido"
            android:layout_width="352dp"
            android:layout_height="match_parent"
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@string/hint2"
            android:textColor="@color/material_dynamic_neutral30"
            android:textSize="14sp"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>


    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:minHeight="48dp"
            android:text="@string/email"
            android:textAlignment="center"
            android:textColor="?attr/textColorAlertDialogListItem"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:text="@string/req"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="italic" />

    </TableRow>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="VisualLintBounds">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Mail"
            android:layout_width="352dp"
            android:layout_height="match_parent"
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@string/hint3"
            android:textColor="@color/material_dynamic_neutral30"
            android:textSize="14sp"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="186dp"
        android:layout_height="72dp"
        android:backgroundTint="@color/material_dynamic_primary30"
        android:text="@string/sub"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.248"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:layout_constraintVertical_bias="0.122" />


</androidx.constraintlayout.widget.ConstraintLayout>